<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <EditText
        android:id="@+id/name_register_edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/name"
        android:singleLine="true"
        android:textColor="@color/fbutton_color_asbestos" />

    <EditText
        android:id="@+id/username_register_edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/username"
        android:singleLine="true"
        android:textColor="@color/fbutton_color_asbestos" />


    <EditText
        android:id="@+id/password_register_edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/password"
        android:singleLine="true"
        android:textColor="@color/fbutton_color_asbestos" />


    <Button
        android:id="@+id/register_btn_register"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"/>

</LinearLayout>