<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/safedrive"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textlogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:text="SAFE DRIVE"
        android:textColor="#000000"
        android:textSize="40dp" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textlogo"
        android:layout_marginTop="49dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">


        <EditText
            android:id="@+id/username_edit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/username"
            android:singleLine="true" />


        <EditText
            android:id="@+id/password_edit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            custom:pb_colorComplete="@color/green_complete"
            custom:pb_colorError="@color/red_error"
            custom:pb_colorNormal="@color/blue_normal"
            custom:pb_colorPressed="@color/blue_pressed"
            custom:pb_colorProgress="@color/purple_progress"
            custom:pb_textComplete="Success"
            custom:pb_textError="Error"
            custom:pb_textProgress="Loading" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="#ffffff"
            android:text="@string/register"/>

        <ImageButton
            android:id="@+id/config_btn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="#00000000"
            android:scaleType="fitCenter"
            android:src="@drawable/settings"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


</LinearLayout>